# clSPARSE

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  annotated.html  apiary.apib  appveyor.yml  cl_s_p_a_r_s_e-1x_8h.html  cl_s_p_a_r_s_e-1x_8h_source.html  cl_s_p_a_r_s_e-2x_8h.html  cl_s_p_a_r_s_e-2x_8h_source.html  cl_s_p_a_r_s_e-error_8h.html  cl_s_p_a_r_s_e-error_8h_source.html  cl_s_p_a_r_s_e-xx_8h.html  cl_s_p_a_r_s_e-xx_8h_source.html  cl_s_p_a_r_s_e_8h.html  cl_s_p_a_r_s_e_8h_source.html  classclsparse_timer-members.html  classclsparse_timer.html  classes.html  clsparse_timer-extern_8hpp.html  clsparse_timer-extern_8hpp_source.html  clsparse_timer_8hpp.html  clsparse_timer_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  examples.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  group___b_l_a_s-1.html  (+39 more)
benchmarks/: CMakeLists.txt  csrmv_benchmark.cpp
benchmarks/common/: Executor.h  MatrixStatistics.h  MatrixUtils.h  Params.h
cmake/: ExternalBoost.cmake  ExternalGmock.cmake  ExternalMTX.cmake  ExternalclBLAS.cmake  FindclBLAS.cmake  cl2c.cmake
doc/performance/clSPARSE-0.6.0.0/W9100/: Csr2Coo.csv  Csr2Dense.csv  SpM-dV.csv
doc/performance/cuSPARSE-0.6.0.0/Tesla_K40/: Csr2Coo.csv  Csr2Dense.csv  SpM-dV.csv
docs/: Doxyfile
docs/performance/clSPARSE-0.6.0.0/W9100/: Coo2Csr.csv  Csr2Coo.csv  Csr2Dense.csv  Dense2Csr.csv  README.md  SpM-dV-double.csv  SpM-dV.csv  clsparse-bench.sh
docs/performance/clSPARSE-0.8.0.0/W9100/: Coo2Csr.csv  Csr2Coo.csv  Csr2Dense.csv  Dense2Csr.csv  README.md  SpGEMM.csv  SpM-dV.csv
docs/performance/cuSPARSE-7.0/Tesla_K40/: Coo2Csr.csv  Csr2Coo.csv  Csr2Dense.csv  Dense2Csr.csv  README.md  SpM-dV-double.csv  SpM-dV.csv  cusparse-bench.sh
docs/performance/cuSPARSE-7.5/Tesla_K40/: Coo2Csr.csv  Csr2Coo.csv  Csr2Dense.csv  Dense2Csr.csv  README.md  SpGEMM.csv  SpM-dV.csv
samples/: CMakeLists.txt  sample-axpy.cpp  sample-cg.cpp  sample-initialization-c.c  sample-initialization.cpp  sample-norm1-c.c  sample-spmv.cpp
samples/cmake/: FindOpenCL.cmake
search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  files_0.js  files_1.js  functions_0.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  groups_0.js  groups_2.js  groups_3.js  groups_4.js  groups_5.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js
src/: CMakeLists.txt
src/benchmarks/: CMakeLists.txt  csr2dense_benchmark.cpp  csrmv_benchmark.cpp
src/benchmarks/clsparse-bench/: CMakeLists.txt
src/benchmarks/clsparse-bench/functions/: clfunc-xSpMdM.hpp  clfunc_common.hpp  clfunc_xBiCGStab.hpp  clfunc_xCG.hpp  clfunc_xCGM.hpp  clfunc_xCGM.hpp.orig  clfunc_xCoo2Csr.hpp  clfunc_xCsr2Coo.hpp  clfunc_xCsr2Dense.hpp  clfunc_xDense2Csr.hpp  clfunc_xSpMSpM.hpp  clfunc_xSpMdV.hpp
src/benchmarks/clsparse-bench/include/: statisticalTimer.h
src/benchmarks/clsparse-bench/src/: main.cpp  statisticalTimer.cpp
src/benchmarks/common/: Executor.h  Executor_csr2dense.h  Find.h  MatrixUtils.h  Params.h  Timer.cpp  Timer.h
src/benchmarks/cusparse-bench/: CMakeLists.txt  cublas-client-math.h  test-limits.h
src/benchmarks/cusparse-bench/functions/: cufunc_common.hpp  cufunc_xCoo2Csr.hpp  cufunc_xCsr2Coo.hpp  cufunc_xCsr2dense.hpp  cufunc_xDense2Csr.hpp  cufunc_xSpMSpM.hpp  cufunc_xSpMSpM_gemm2Timed.hpp  cufunc_xSpMdV.hpp
src/benchmarks/cusparse-bench/include/: cufunc_sparse-xx.h  io-exception.hpp  mm_reader.hpp  statisticalTimer.h
src/benchmarks/cusparse-bench/src/: main.cpp  mm_reader.cpp  statisticalTimer.cpp
src/clsparseTimer/: CMakeLists.txt  clsparseTimer-device.cpp  clsparseTimer-device.hpp  clsparseTimer-extern.cpp  clsparseTimer-host.cpp  clsparseTimer-host.hpp  clsparseTimer.device.cpp  clsparseTimer.device.hpp  clsparseTimer.extern.cpp  clsparseTimer.host.cpp  clsparseTimer.host.hpp  dllmain.cpp
src/cmake/: FindOpenCL.cmake  FindclBLAS.cmake  cl2c.cmake  cl2cpp.cmake  cl2cpp_raw.cmake
src/include/: clSPARSE-1x.h  clSPARSE-2x.h  clSPARSE-error.h  clSPARSE-error.hpp  clSPARSE-version.h.in  clSPARSE-xx.h  clSPARSE.h  clSPARSE.hpp  clSPARSE.version.h.in  clSPARSE_1x.h  clSPARSE_2x.h  clSPARSE_xx.h  clsparse.error.hpp  clsparseTimer-extern.hpp  clsparseTimer.extern.hpp  clsparseTimer.hpp  loadDynamicLibrary.hpp
src/tests/: CMakeLists.txt  test-blas1.cpp  test-blas2.cpp  test-blas3.cpp  test-clsparse-utils.cpp  test-conversion.cpp  test-reduce-by-key.cpp  test-scan.cpp  test-solvers.cpp  test_cl_axpby.cpp  test_cl_axpy.cpp  test_cl_scale.cpp  test_cl_traits.cpp  test_clsparse_coo2csr.cpp  test_clsparse_csr2coo.cpp  test_clsparse_csr2dense.cpp  test_clsparse_dense2csr.cpp  test_clsparse_init.cpp  test_clsparse_transpose.cpp  test_csrmm.cpp  test_csrmv_simple.cpp  test_dot.cpp  test_hdl_list.cpp  test_interface_c.c  test_interface_cpp.cpp  test_kernel_simple.cpp  test_norm1.cpp  test_norm2.cpp  test_readMMcoo.cpp  test_reduce.cpp  test_solver_bicgStab.cpp  test_solver_cg.cpp  test_validation.cpp
src/tests/resources/: blas1_environment.h  clsparse_environment.h  csr_matrix_environment.cpp  csr_matrix_environment.h  hdl_test_resources.h  matrix_market.h  matrix_utils.h  opencl_utils.cpp  opencl_utils.h  sparse_matrix_environment.cpp  sparse_matrix_environment.h  sparse_matrix_fill.hpp
tests/: CMakeLists.txt  test_clsparse_spmv_ctrl.cpp  test_clsparse_transpose.cpp  test_csrmv_simple.cpp  test_hdl_list.cpp  test_kernel_simple.cpp  test_resources_io.cpp  test_validation.cpp
tests/resources/: clsparse_environment.h  csr_matrix_environment.cpp  csr_matrix_environment.h  matrix_market.h  matrix_utils.h  opencl_utils.h
